--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -51,10 +51,10 @@
     #+BEGIN_SRC elisp
     (require 'package)
 
-    (setq package-archives '(("org"       . "http://orgmode.org/elpa/")
-                             ("gnu"       . "http://elpa.gnu.org/packages/")
-                             ("melpa"     . "http://melpa.org/packages/")
-                             ("marmalade" . "http://marmalade-repo.org/packages/")))
+    (setq package-archives '(("org"       . "https://orgmode.org/elpa/")
+                             ("gnu"       . "https://elpa.gnu.org/packages/")
+                             ("melpa"     . "https://melpa.org/packages/")
+                             ("marmalade" . "https://marmalade-repo.org/packages/")))
 
     (package-initialize)
     (package-refresh-contents)
