feat: add config file

--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -11,12 +11,11 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
-
-* Emacs 启动文件
-
-** 错误配置
+** 错误提醒相关
    当发生错误的时候，打印错错误的堆栈信息。
    #+BEGIN_SRC elisp
+   ;;(setq url-proxy-services '(("https" . "127.0.0.1:1089")
+   ;;                        ("http" . "127.0.0.1:1089")))
    (setq debug-on-error t)
    #+END_SRC
 
@@ -29,7 +28,6 @@
       (error "Your Emacs is too old -- this config requires v%s or higher" minver)))
   (when (version< emacs-version "25.1")
     (message "Your Emacs is old, and some functionality in this config will be disabled. Please upgrade if possible."))
-
   #+END_SRC
 
 ** 系统配置
@@ -49,15 +47,32 @@
     Emacs 的包管理器名为：[[http://tromey.com/elpa/][package]]. 但是 package 默认配置插件仓库包含的插件相对较少，我们需要添加一些常用的第三方插件仓库，以便与搜索与安装插件。
 
     #+BEGIN_SRC elisp
-    (require 'package)
+(require 'package)
+;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
+(let ((versioned-package-dir
+       (expand-file-name (format "elpa-%s.%s" emacs-major-version emacs-minor-version)
+                         user-emacs-directory)))
+  (setq package-user-dir versioned-package-dir))
 
-    (setq package-archives '(("org"       . "https://orgmode.org/elpa/")
-                             ("gnu"       . "https://elpa.gnu.org/packages/")
-                             ("melpa"     . "https://melpa.org/packages/")
-                             ("marmalade" . "https://marmalade-repo.org/packages/")))
+;;; Standard package repositories
+(let* ((no-ssl (and (memq system-type '(windows-nt ms-dos))
+                    (not (gnutls-available-p))))
+       (proto (if no-ssl "http" "https")))
+  (if no-ssl
+    (setq package-archives '(("gnu"   . "http://elpa.emacs-china.org/gnu/")
+                         ("melpa" . "http://elpa.emacs-china.org/melpa/")))
+    (unless no-ssl
+    	(setq package-archives '(("gnu"   . "https://elpa.emacs-china.org/gnu/")
+                         ("melpa" . "https://elpa.emacs-china.org/melpa/")))))
+  )
 
-    (package-initialize)
-    (package-refresh-contents)
+
+;; Work-around for https://debbugs.gnu.org/cgi/bugreport.cgi?bug=34341
+(when (version= "26.2" emacs-version)
+  (setq gnutls-algorithm-priority "NORMAL:-VERS-TLS1.3"))
+
+(package-initialize)
+(package-refresh-contents)
     #+END_SRC
 *** use package
     Emacs 常见的配置管理都是先使用包管理器安装对应的包，然后再进行配置。安装包和配置是割裂开的。对于使用多个包的情况，安装包配置会分散到各个地方，安装包相关的配置会变得难以维护。
@@ -69,23 +84,53 @@
       (package-install 'use-package))
 
     (require 'use-package)
+    (setq use-package-always-ensure t)
     #+END_SRC
 
 *** 包加载路径配置
     所有的自定义的配置文件都在 emacs 配置文件夹下的 lisp 目录下。所以我们需要将 lisp 目录添加到加载路径中
     #+BEGIN_SRC elisp
-    (add-to-list 'load-path (expand-file-name "mlisp" user-emacs-directory))
+    (add-to-list 'load-path (expand-file-name "lisp" user-emacs-directory))
+    (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
     #+END_SRC
 
+*** 保证永远使用最新的 lisp 配置文件，或者库文件
+  #+BEGIN_SRC elisp
+  (use-package auto-compile
+  :ensure t
+  :custom (load-prefer-newer t)
+  :config
+    (auto-compile-on-load-mode)
+    (auto-compile-on-save-mode))
+  #+END_SRC
+
+ 
 ** 自定义配置聚合
 
    #+BEGIN_SRC elisp
-   (use-package init-org
-    :load-path (lambda () (expand-file-name "mlisp" user-emacs-directory)))
+   (use-package init-os
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-ui
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-completion
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-project
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-literate
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-vcs
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-lsp
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-editing
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-chinese
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
+   (use-package init-languages
+    :load-path (lambda () (expand-file-name "lisp" user-emacs-directory)))
    #+END_SRC
 
-** 配置导出
-  将当前文件作为一个名为 bootstrap 的 elisp 包提供出来。
-  #+BEGIN_SRC elisp
-  (provide 'bootstrap)
-  #+END_SRC
+
+#+BEGIN_SRC elisp
+(provide 'init)
+#+END_SRC
