--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -5,7 +5,7 @@
 #+DESCRIPTION: A literate programming version of my Emacs Initialization script, loaded by the .emacs file.
 #+PROPERTY:    header-args        :results silent   :eval no-export   :comments org
 #+PROPERTY:    header-args        :mkdirp yes
-#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/init-chinese.el"
+#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/lisp/init-chinese.el"
 #+PROPERTY:    header-args:shell  :tangle no
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
@@ -75,7 +75,7 @@
   :bind
   (("M-j" . pyim-convert-string-at-point) ;与 pyim-probe-dynamic-english 配合
    ("C-;" . pyim-delete-word-from-personal-buffer))
-  :hook ((emacs-startup . pyim-restart))
+  :hook ((emacs-startup . pyim-restart)))
 #+END_SRC
 
 
