--- a/hammers/emacs/os.org
+++ b/hammers/emacs/os.org
@@ -5,17 +5,39 @@
 #+DESCRIPTION: Emacs config for specific operation system
 #+PROPERTY:    header-args        :results silent   :eval no-export   :comments org
 #+PROPERTY:    header-args        :mkdirp yes
-#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/mlisp/init-os.el"
+#+PROPERTY:    header-args:elisp  :tangle "~/.emacs.d/lisp/init-os.el"
 #+PROPERTY:    header-args:shell  :tangle no
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
-* OS
-
 ** macos
+
    #+BEGIN_SRC elisp
    (when (eq m/os 'macos)
      (setq mac-command-modifier 'meta)
      (setq mac-option-modifier 'super))
    #+END_SRC
+
+** linux
+
+   #+BEGIN_SRC elisp
+   (when (eq m/os 'linux)
+     (setq x-super-keysym 'meta))
+
+   (if (eq window-system 'x)
+    (set-default-font "-misc-fixed-medium-r-normal--13-120-75-75-c-70-iso8859-15"))
+   #+END_SRC
+
+** 环境变量
+   #+BEGIN_SRC elisp
+   (use-package exec-path-from-shell
+    :config
+    (when (memq window-system '(mac ns x))
+      (exec-path-from-shell-initialize)))
+   #+END_SRC
+
+
+  #+BEGIN_SRC elisp
+  (provide 'init-os)
+  #+END_SRC
