--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -246,8 +246,7 @@ same directory as the org-buffer and insert a link to this file."
       ;; (org-level-3 ((t (:inherit outline-3 :height 1.0))))
       ;; (org-level-4 ((t (:inherit outline-4 :height 1.0))))
       ;; (org-level-5 ((t (:inherit outline-5 :height 1.0))))
-      :bind (([remap move-beginning-of-line] . m/smarter-move-beginning-of-line)
-	     ("C-c c" . org-capture)
+      :bind (("C-c c" . org-capture)
 	     ("C-c a" . org-agenda)
 	     ("C-c b" . org-switchb)
 	     ("C-x C-l" . org-store-link)
