feat: add ivy rich

--- a/hammers/emacs/ui.org
+++ b/hammers/emacs/ui.org
@@ -129,7 +129,11 @@
    (use-package all-the-icons-ivy
      :after all-the-icons
      :config
-     (all-the-icons-ivy-setup)))
+     (all-the-icons-ivy-setup))
+   (use-package ivy-rich
+     :config
+     (ivy-rich-mode 1)
+     (setcdr (assq t ivy-format-functions-alist) #'ivy-format-function-line)))
  #+END_SRC
 
 *** counsel
