--- a/hammers/emacs/os.org
+++ b/hammers/emacs/os.org
@@ -25,7 +25,7 @@
 (when (eq m/os 'linux)
    (setq x-super-keysym 'meta))
 
-(if (eq window-system 'x)
+(if (eq m/os 'linux)
   (set-default-font "-misc-fixed-medium-r-normal--13-120-75-75-c-70-iso8859-15"))
  #+END_SRC
 *** 剪切板管理
@@ -39,7 +39,7 @@
 #+BEGIN_SRC elisp
 (use-package exec-path-from-shell
  :config
- (when (memq window-system '(mac ns x))
+ (when (memq m/os '(macos linux))
    (exec-path-from-shell-initialize)))
 #+END_SRC
 ** 导出
