--- a/hammers/emacs/os.org
+++ b/hammers/emacs/os.org
@@ -26,7 +26,7 @@
    (setq x-super-keysym 'meta))
 
 (if (eq m/os 'linux)
-  (set-default-font "-misc-fixed-medium-r-normal--13-120-75-75-c-70-iso8859-15"))
+  (set-default-font "-WQYF-WenQuanYi Micro Hei Mono-normal-normal-normal-*-15-*-*-*-*-0-iso10646-1"))
  #+END_SRC
 *** 剪切板管理
 #+BEGIN_SRC elisp
