--- a/hammers/emacs/project.org
+++ b/hammers/emacs/project.org
@@ -21,7 +21,11 @@
    ("C-c p p" . counsel-projectile-switch-project)
    ("C-c p f" . counsel-projectile-find-file)
    ("C-c p s" . projectile-save-project-buffers)
-   ("C-c p r" . counsel-projectile-rg))
+   ("C-c p d" . counsel-projectile-find-dir)
+   ("C-c p c" . projectile-compile-project)
+   ("C-c p r" . counsel-projectile-rg)
+   ("C-c p %" . projectile-replace-regexp)
+   ("C-c p g" . projectile-grep))
   :config
   (setq projectile-enable-caching t)
   (setq projectile-mode-line-prefix "ρ")
